--- a/ExampleProject~/Assets/UI/CraftItemButton.uxml
+++ b/ExampleProject~/Assets/UI/CraftItemButton.uxml
@@ -1,3 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Button text="Craft&#10;2x fire wood&#10;&#10;requires&#10;1x wood&#10;&#10;owned 3x" parse-escape-sequences="true" display-tooltip-when-elided="true" style="flex-grow: 0; width: 150px; height: 200px; white-space: normal;" />
+    <ui:Button text="Craft&#10;2x fire wood&#10;&#10;requires&#10;1x wood&#10;&#10;owned 3x" parse-escape-sequences="true" display-tooltip-when-elided="true" style="flex-grow: 0; width: 150px; height: 200px; white-space: normal;">
+        <ui:ProgressBar value="0.1" name="progressbar" high-value="1" style="-unity-text-align: middle-center; position: absolute; left: 0; right: 0; bottom: 0;" />
+    </ui:Button>
 </ui:UXML>
